--- a/.tarvis.yml
+++ b/.tarvis.yml
@@ -4,6 +4,7 @@ jdk:
   - openjdk8
   - oraclejdk11
   - openjdk11
+script: "mvn test"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
