--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 #
 version: 2
 jobs:
-  openjdk-8:
+  build:
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:8-jdk
@@ -14,7 +14,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
+    working_directory: ~/repo-8
 
     environment:
       # Customize the JVM maximum heap limit
@@ -50,7 +50,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
+    working_directory: ~/repo-11
 
     environment:
       # Customize the JVM maximum heap limit
@@ -75,3 +75,9 @@ jobs:
 
       # run tests!
       - run: mvn integration-test
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - openjdk-11
