--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,18 @@ jobs:
       # run tests!
       - run: mvn integration-test
 
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+          
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit         
+
   openjdk-11:
     docker:
       # specify the version you desire here
@@ -75,6 +87,18 @@ jobs:
 
       # run tests!
       - run: mvn integration-test
+
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+
+      - store_test_results:
+          path: ~/test-results
+      - store_artifacts:
+          path: ~/test-results/junit         
 workflows:
   version: 2
   build_and_test:
