Rewritten travisci to break up into stages

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,22 @@ jdk:
   - openjdk8
   - openjdk11
   - openjdk12
-script: "mvn test jacoco:report"
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
-  - mvn coveralls:report
-  - mvn docker:build
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker tag samplespringbootapp $DOCKER_USERNAME/samplespringbootapp
-  - docker push $DOCKER_USERNAME/samplespringbootapp
+script: "mvn verify"
+
+jobs:
+  include:
+    - stage: "Tests and upload codecov, coveralls"     
+      jdk: openjdk11
+      script: "mvn test jacoco:report"
+      after_script:
+        - bash <(curl -s https://codecov.io/bash)
+        - mvn coveralls:report
+    - stage: "Build and push docker image"
+      jdk: openjdk11
+      script: mvn package docker:build -DskipTests
+      after_script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker tag samplespringbootapp $DOCKER_USERNAME/samplespringbootapp
+        - docker push $DOCKER_USERNAME/samplespringbootapp
   
