--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>github.parj</groupId>
   <artifactId>samplespringbootapp</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>samplespringbootapp</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/parj/SampleSpringBootApp</url>
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.1.3.RELEASE</version>
   </parent>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -32,10 +35,13 @@
       <version>${swagger.version}</version>
     </dependency>
   </dependencies>
+
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>1.11</java.version>
     <swagger.version>2.9.2</swagger.version>
+    <jar_file>${project.build.directory}/${project.build.finalName}.jar</jar_file>
   </properties>
+
   <build>
     <plugins>
       <plugin>
@@ -48,25 +54,42 @@
         <version>4.0.1</version>
       </plugin>
       <plugin>
-        <groupId>com.spotify</groupId>
+        <groupId>io.fabric8</groupId>
         <artifactId>docker-maven-plugin</artifactId>
-        <version>1.2.0</version>
+        <version>0.30.0</version>
+        <extensions>true</extensions>
+
         <configuration>
-          <imageName>samplespringbootapp</imageName>
-          <baseImage>gcr.io/distroless/java:8</baseImage>
-          <imageTags>
-            <imageTag>${project.version}</imageTag>
-            <imageTag>latest</imageTag>
-          </imageTags>
-          <entryPoint>["java", "-jar", "/usr/app/${project.build.finalName}.jar"]</entryPoint>
-          <forceTags>true</forceTags>
-          <resources>
-            <resource>
-              <targetPath>/usr/app</targetPath>
-              <directory>${project.build.directory}</directory>
-              <include>${project.build.finalName}.jar</include>
-            </resource>
-          </resources>
+          <verbose>true</verbose>
+
+          <images>
+            <image>
+              <alias>sample</alias>
+              <name>parjanya/${project.name}</name>
+              <build>
+                <from>gcr.io/distroless/java:11</from>
+                <maintainer>parjanya@gmail.com</maintainer>
+                <tags>
+                  <tag>latest</tag>
+                  <tag>${project.version}</tag>
+                </tags>
+                <assembly>
+                  <!-- This is a predefined assembly.xml that will only copy your final artifact to the Docker image -->
+                  <descriptorRef>artifact</descriptorRef>
+                </assembly>
+                <entryPoint>
+                  <exec>
+                    <arg>java</arg>
+                    <arg>-jar</arg>
+                    <!-- This extra argument is so Tomcat can start faster due to lack of entropy -->
+                    <arg>-Djava.security.egd=file:/dev/./urandom</arg>
+                    <!-- /maven/ is the default dir that the plugin copies your artifact to -->
+                    <arg>/maven/${project.artifactId}-${project.version}.${project.packaging}</arg>
+                  </exec>
+                </entryPoint>
+              </build>
+            </image>
+          </images>
         </configuration>
       </plugin>
       <!-- Required to get dockerfile to run junit tests succesfully -->
@@ -91,6 +114,7 @@
               </execution>
           </executions>
       </plugin>
+      <!-- For https://coveralls.io -->
       <plugin>
           <groupId>org.eluder.coveralls</groupId>
           <artifactId>coveralls-maven-plugin</artifactId>
