--- a/.travis.yml
+++ b/.travis.yml
@@ -28,18 +28,16 @@ jobs:
       after_script:
         - bash <(curl -s https://codecov.io/bash)
         - mvn coveralls:report
-        - mvn deploy
+
+    - stage: "Deploy to ossrh"
+      jdk: openjdk11
+      script: "mvn deploy -DskipTests"
         
     - stage: "Build and push docker image"
       jdk: openjdk11
       services: docker
-      script: mvn package docker:build -DskipTests
+      script: "mvn package docker:build -DskipTests"
       after_script:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push $DOCKER_USERNAME/samplespringbootapp:1.0-SNAPSHOT
         - docker push $DOCKER_USERNAME/samplespringbootapp:latest
-        - echo "$DOCKER_BINTRAY_API" | docker login -u "$DOCKER_BINTRAY_USER" --password-stdin parj-docker-public-docker.bintray.io
-        - docker tag $DOCKER_USERNAME/samplespringbootapp:1.0-SNAPSHOT parj-docker-public-docker.bintray.io/samplespringbootapp:1.0-SNAPSHOT
-        - docker tag $DOCKER_USERNAME/samplespringbootapp:latest parj-docker-public-docker.bintray.io/samplespringbootapp:latest
-        - docker push parj-docker-public-docker.bintray.io/samplespringbootapp:1.0-SNAPSHOT
-        - docker push parj-docker-public-docker.bintray.io/samplespringbootapp:latest
