--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,6 @@ cache:
     - $HOME/.m2
     - $HOME/.cache
 
-deploy:
-  provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml"
-  skip_cleanup: true
-  on:
-    tags: true
-
 script: "mvn verify"
 
 jobs:
@@ -31,7 +24,7 @@ jobs:
 
     - stage: "Deploy to ossrh"
       jdk: openjdk11
-      script: "cp .travis.settings.xml $HOME/.m2/settings.xml && cat $HOME/.m2/settings.xml && mvn deploy -DskipTests"
+      script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy -DskipTests"
         
     - stage: "Build and push docker image"
       jdk: openjdk11
