--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ jobs:
       jdk: openjdk11
       deploy:
         provider: script
-        script:
-          -| cp .travis.settings.xml $HOME/.m2/settings.xml &&
+        script: cp .travis.settings.xml $HOME/.m2/settings.xml &&
           if [[ $TRAVIS_BRANCH == "release" ]]; then
             echo "Release build";
             export TRAVIS_TAG="1.$TRAVIS_BUILD_NUMBER";
