Added in readiness and liveness probes

--- a/kubernetes-template/samplespringbootapp-deployment.jsonnet.template
+++ b/kubernetes-template/samplespringbootapp-deployment.jsonnet.template
@@ -4,7 +4,28 @@ local samplespringbootapp() = serviceDeployment + {
     serviceName:: "samplespringbootapp",
     dockerImage:: "parjanya/samplespringbootapp:1.6-SNAPSHOT",
     servicePort:: 9999,
-    url:: "/hello"
+    url:: "/hello",
+
+    readinessProbe::
+        {
+            "httpGet": {
+                "path": "/hello/actuator/health",
+                "port": "container-port"
+            },
+            "initialDelaySeconds": 8,
+            "periodSeconds": 10
+        },
+
+    livenessProbe::
+        {
+            "httpGet": {
+                "path": "/hello/commitId",
+                "port": "container-port"
+            },
+            "initialDelaySeconds": 8,
+            "periodSeconds": 10
+        },
+
 };
 
 // Export the function as a constructor for shards
