Changed template to lowercase

--- a/kubernetes-template/samplespringbootapp-deployment.jsonnet.template
+++ b/kubernetes-template/samplespringbootapp-deployment.jsonnet.template
@@ -1,4 +1,4 @@
-local serviceDeployment = import "service-deployment-ingress.jsonnet.TEMPLATE";
+local serviceDeployment = import "service-deployment-ingress.jsonnet.template";
 
 local samplespringbootapp() = serviceDeployment + {
     serviceName:: "samplespringbootapp",
