Removed docker laying caching from circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           command: .travis/importKeys.sh
 
       - setup_remote_docker:
-          docker_layer_caching: true
+          docker_layer_caching: false
 
       # run tests!
       - run: .travis/build.sh
