Updated gitignore to ignore Bazel. CiecleCI config will push jar to github

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,11 @@ jobs:
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
             mvn docker:push  
 
+      - run:
+          name: Upload artifact to Github
+          command: |
+            mvn deploy -Dregistry=https://maven.pkg.github.com/parj -Dtoken=$GH_TOKEN
+
   openjdk-8:
     docker:
       # specify the version you desire here
