--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,7 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/openjdk:11-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
 
     working_directory: ~/repo-11
 
@@ -39,13 +33,14 @@ jobs:
 
       - run:
           name: Add GPG key
-          command: .travis/importKeys.sh
+          command: .ci/build.sh --import-key
 
       - setup_remote_docker:
           docker_layer_caching: false
 
-      # run tests!
-      - run: .travis/build.sh
+      - run:
+          name: Package, run tests, sign, upload snapshot to ossrh and upload dockerimage to Dockerhub
+          command: .ci/build.sh
 
       - run:
           name: Save test results
@@ -67,13 +62,7 @@ jobs:
 
   openjdk-8:
     docker:
-      # specify the version you desire here
       - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
 
     working_directory: ~/repo-8
 
@@ -104,7 +93,7 @@ jobs:
 
       - run:
           name: Add GPG key
-          command: .travis/importKeys.sh
+          command: .ci/build.sh --import-key
           
       # run tests!
       - run: 
@@ -124,13 +113,7 @@ jobs:
           path: ~/test-results/junit
   openjdk-13:
     docker:
-      # specify the version you desire here
       - image: circleci/openjdk:13-jdk-buster
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
 
     working_directory: ~/repo-13
 
@@ -161,9 +144,8 @@ jobs:
 
       - run:
           name: Add GPG key
-          command: .travis/importKeys.sh
+          command: .ci/build.sh --import-key
           
-      # run tests!
       - run: 
           name: Build Artifact, Release Artifact to Nexus, Build Docker image
           command: mvn test
