FIX: Added git submodule init

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,10 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       - run:
+          name: Init submodule
+          command: git submodule update --init --recursive
+
+      - run:
           name: Add GPG key
           command: .ci/build.sh --import-key
 
@@ -92,6 +96,10 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       - run:
+          name: Init submodule
+          command: git submodule update --init --recursive
+
+      - run:
           name: Add GPG key
           command: .ci/build.sh --import-key
           
@@ -141,6 +149,10 @@ jobs:
           paths:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
+
+      - run:
+          name: Init submodule
+          command: git submodule update --init --recursive
 
       - run:
           name: Add GPG key
