--- a/kubernetes/samplespringbootapp-deployment.jsonnet.template
+++ b/kubernetes/samplespringbootapp-deployment.jsonnet.template
@@ -1,4 +1,4 @@
-local serviceDeployment = import "service-deployment-ingress.jsonnet.template";
+local serviceDeployment = import "../kubernetes-template/service-deployment-ingress.jsonnet.template";
 
 local samplespringbootapp() = serviceDeployment + {
     serviceName:: "samplespringbootapp",
